tests/miniJava/neg/005249_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] Main ( ) { return 0 ; } }
